1080p-screeen-spacing-fix

--- a/src/app/_components/header/header.module.css
+++ b/src/app/_components/header/header.module.css
@@ -1,7 +1,7 @@
 .header {
 	display: flex;
 	align-items: center;
-	height: 10vh;
+	height: 15vh;
 	border-radius: 0 0 2rem 2rem;
 	box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.3);
 	padding: 1rem 4vw;
