--- a/src/app/_components/quizzes/CreateQuizForm.module.css
+++ b/src/app/_components/quizzes/CreateQuizForm.module.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    width: 60vw;
+    /* width: 60vw; */
     height: 60vh;
-    padding: 4rem;
+    aspect-ratio: 5/3;
+    padding: 4vh 4rem;
     border-radius: 2rem;
     background-color: var(--background);
     box-shadow: 0 0 1rem color-mix(in srgb, var(--foreground) 50%, var(--background) 50%);
@@ -13,17 +14,17 @@
         font-size: 3rem;
         font-weight: 800;
         text-align: center;
-        margin-bottom: 4rem;
+        margin-bottom: 2vh;
     }
 
     & .label{
         font-size: 2rem;
         font-weight: 700;
-        margin-bottom: .2rem;
+        margin-bottom: .5vh;
     }
 
     & .input{
-        margin-bottom: 3rem;
+        margin-bottom: 2vh;
         padding: 0 2rem;
         height: 3.5rem;
         border-radius: .5rem;
