--- a/src/app/_components/quizzes/CreateQuizPage.module.css
+++ b/src/app/_components/quizzes/CreateQuizPage.module.css
@@ -1,5 +1,5 @@
 .createquizpage{
     display: flex;
     flex-direction: column;
-    height: 90vh;
+    height: 85vh;
 }
