--- a/src/app/_components/trending/trending.module.css
+++ b/src/app/_components/trending/trending.module.css
@@ -1,5 +1,5 @@
 .trending{
-    margin: 10rem 5vw;
+    margin: 10rem 10vw;
 
     & .titlebar{
         display: flex;
